--- a/index.html
+++ b/index.html
@@ -5,14 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/header.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
     <!-- 头 -->
+    <nav id="nav">
+        <div class="container center navbar navbar-expand-sm  bg-light navbar-light">
+          <!-- 最前面不隐藏的菜单 -->
+          <div class="navbar-brand">
+              <a href=""><img src="./img/index/logo.png" alt=""></a>
+          </div>
+          <!-- 折叠之后出现的按钮，小屏显示，大屏不显示-->
+            <button data-toggle="collapse" data-target="#content" class="navbar-toggler right">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+          <!-- 折叠的导航，小屏折叠，大屏横向 -->
+          <div id="content" class="collapse navbar-collapse">
+              <ul class="navbar-nav">
+                  <li class="nav-item" ><a class="nav-link" href="">首页</a></li>
+                  <li class="nav-item" ><a class="nav-link" href="">关于我们</a></li>
+                  <li class="nav-item" ><a class="nav-link" href="">私人订制</a></li>
+                  <li class="nav-item" ><a class="nav-link" href="">精选主题</a></li>
+                  <li class="nav-item" ><a class="nav-link" href="">外景拍摄</a></li>
+                  <li class="nav-item" ><a class="nav-link" href="">联系我们</a></li>
+              </ul>
+          </div>
+        </div>
+    </nav>
     <!-- 轮播图 -->
-    <div></div>
+    <div id="lunbo" class="carousel" data-ride="carousel">
+        <!-- 轮播图片 -->
+        <div class="carousel-inner ">
+            <div class="carousel-item active"><img class="w-100" src="./img/index/carousel1.jpg" alt=""></div>
+            <div class="carousel-item "><img class="w-100" src="./img/index/carousel2.jpg" alt=""></div>
+            <div class="carousel-item "><img class="w-100" src="./img/index/carousel3.jpg" alt=""></div>
+            <div class="carousel-item "><img class="w-100" src="./img/index/carousel4.jpg" alt=""></div>
+            <div class="carousel-item "><img class="w-100" src="./img/index/carousel5.jpg" alt=""></div>
+            <div class="carousel-item "><img class="w-100" src="./img/index/carousel6.jpg" alt=""></div>
+            <div class="carousel-item "><img class="w-100" src="./img/index/carousel7.jpg" alt=""></div>
+        </div>
+        <!-- 2.左右箭头-->
+        <a data-slide="prev" href="#lunbo" class="carousel-control-prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a data-slide="next" href="#lunbo" class="carousel-control-next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+        <!-- 3.轮播指示器-->
+        <ul class="carousel-indicators">
+            <li data-target="#lunbo" data-slide-to="0" class="active"></li>
+            <li data-target="#lunbo" data-slide-to="1"></li>
+            <li data-target="#lunbo" data-slide-to="2"></li>
+            <li data-target="#lunbo" data-slide-to="3"></li>
+            <li data-target="#lunbo" data-slide-to="4"></li>
+            <li data-target="#lunbo" data-slide-to="5"></li>
+            <li data-target="#lunbo" data-slide-to="6"></li>
+        </ul>
+    </div>
     <!-- 客户满意 -->
     <div></div>
     <!-- 拍摄推荐 -->
