--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
     <script src="js/jquery.min.js"></script>
@@ -67,9 +68,113 @@
         </ul>
     </div>
     <!-- 客户满意 -->
-    <div></div>
+    <div class="mt-5">
+        <!-- 上 部分-->
+        <section>
+           <div class="title">客户满意是我们最大的追求</div>
+           <p class="p-style">结婚是一个幸福的决定，是两个有情的牵手，是三生石上不变的承诺，是四世同堂最美的梦境</p>
+           <p class="p-style">千禧年结千年缘，百年身伴百年眠。天生才子佳人配，只羡鸳鸯不羡仙 </p>
+        </section>
+        <!-- 下部分 -->
+        <div class="mt-5 mb-3">
+            <div class="row ">
+                <ul class="list-unstyled ul-item">
+                    <li class="col-md-4 col-xs-12 float mt-sm-5 mt-md-0">
+                        <div class="kuang">
+                            <div class="img"><img src="./img/index/L.png" alt=""></div>
+                            <span>
+                                <h2><a href="">行程定制</a></h2>
+                                <p>
+                                    选择唯汀·薇尔，带您享受到搭乘内河游轮游览欧洲的美妙体验，感受不一样的婚纱外景拍摄。
+                                </p>
+                            </span>
+                        </div>
+                    </li>
+                    <li class="col-md-4 col-xs-12 float mt-sm-5 mt-md-0">
+                        <div class="kuang">
+                            <div class="img"><img src="./img/index/X.png" alt=""></div>
+                            <span>
+                                <h2><a href="">选择信任</a></h2>
+                                <p>
+                                    唯汀·薇尔，我们相信拍摄婚纱照是应该彻底放松的，享受美妙时光，其他的交给我们
+                                </p>
+                            </span>
+                        </div>
+                    </li>
+                    <li class="col-md-4 col-xs-12 float mt-sm-5 mt-md-0">
+                        <div class="kuang">
+                            <div class="img"><img src="./img/index/F.png" alt=""></div>
+                            <span>
+                                <h2><a href="">贴心服务</a></h2>
+                                <p>
+                                    对于唯汀·薇尔的工作人员来说，我们的任务就是让您舒适，轻松的完成婚纱照的拍摄
+                                </p>
+                            </span>
+                        </div>
+                    </li>   
+                </ul>
+            </div>
+        </div>
+    </div>
     <!-- 拍摄推荐 -->
-    <div></div>
+    <div class="bg">
+        <div class="container">
+           <!-- 上部分 -->
+           <div class="text-center p-3" >
+               <div class="paishe ">
+                   <h2>拍摄推荐
+                       <span style="font-size: 25px;">· Photography</span>
+                   </h2>
+                   <p>外景拍摄，自由，没有沉重的负担，只有纯粹的态度</p>
+               </div>
+           </div>
+           <!-- 下部分 -->
+           <div class="row ">
+               <div class="col-md-4 col-sm-6 work p-3 ">
+                   <a href="#"><img  class="" src="./img/index/work-1.jpg" alt=""></a>
+                   <div class="work-item ">
+                    <h5>外景1</h5>
+                    <span>¥880.00</span>
+                   </div>
+               </div>
+               <div class="col-md-4 col-sm-6 work  p-3 ">
+                <a href="#"><img  class="" src="./img/index/work-2.jpg" alt=""></a>
+                <div class="work-item ">
+                 <h5>外景1</h5>
+                 <span>¥880.00</span>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 work  p-3 ">
+                <a href="#"><img  class="" src="./img/index/work-3.jpg" alt=""></a>
+                <div class="work-item ">
+                 <h5>外景1</h5>
+                 <span>¥880.00</span>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 work  p-3 ">
+                <a href="#"><img  class="" src="./img/index/work-4.jpg" alt=""></a>
+                <div class="work-item ">
+                 <h5>外景1</h5>
+                 <span>¥880.00</span>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 work p-3  ">
+                <a href="#"><img  class="" src="./img/index/work-5.jpg" alt=""></a>
+                <div class="work-item ">
+                 <h5>外景1</h5>
+                 <span>¥880.00</span>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 work  p-3 ">
+                <a href="#"><img  class="" src="./img/index/work-6.jpg" alt=""></a>
+                <div class="work-item ">
+                 <h5>外景1</h5>
+                 <span>¥880.00</span>
+                </div>
+            </div>
+           </div>
+        </div>
+    </div>
     <!-- 我们的服务 -->
     <div></div>
     <!-- 让顾客快乐拍摄 -->
