--- a/index.html
+++ b/index.html
@@ -130,42 +130,42 @@
            </div>
            <!-- 下部分 -->
            <div class="row ">
-               <div class="col-md-4 col-sm-6 work p-3 ">
+               <div class="col-md-4 col-sm-6  work p-3 float">
                    <a href="#"><img  class="" src="./img/index/work-1.jpg" alt=""></a>
                    <div class="work-item ">
                     <h5>外景1</h5>
                     <span>¥880.00</span>
                    </div>
                </div>
-               <div class="col-md-4 col-sm-6 work  p-3 ">
+               <div class="col-md-4 col-sm-6  work  p-3 float">
                 <a href="#"><img  class="" src="./img/index/work-2.jpg" alt=""></a>
                 <div class="work-item ">
                  <h5>外景1</h5>
                  <span>¥880.00</span>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 work  p-3 ">
+            <div class="col-md-4 col-sm-6  work  p-3 float">
                 <a href="#"><img  class="" src="./img/index/work-3.jpg" alt=""></a>
                 <div class="work-item ">
                  <h5>外景1</h5>
                  <span>¥880.00</span>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 work  p-3 ">
+            <div class="col-md-4 col-sm-6 work  p-3 float">
                 <a href="#"><img  class="" src="./img/index/work-4.jpg" alt=""></a>
                 <div class="work-item ">
                  <h5>外景1</h5>
                  <span>¥880.00</span>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 work p-3  ">
+            <div class="col-md-4 col-sm-6 work p-3 float ">
                 <a href="#"><img  class="" src="./img/index/work-5.jpg" alt=""></a>
                 <div class="work-item ">
                  <h5>外景1</h5>
                  <span>¥880.00</span>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 work  p-3 ">
+            <div class="col-md-4 col-sm-6 work  p-3 float">
                 <a href="#"><img  class="" src="./img/index/work-6.jpg" alt=""></a>
                 <div class="work-item ">
                  <h5>外景1</h5>
